syntax = "proto3";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "activity.proto";
import "instance.proto";
import "instancev1.proto";
import "list.proto";
import "rule.proto";

option csharp_namespace = "Mastodon.Grpc";

service InstanceApi {
  rpc GetInstance (google.protobuf.Empty) returns (Instance)
  {
	option (google.api.http) = {
      get: "/api/v2/instance"
    };
  }
  rpc GetInstanceV1 (google.protobuf.Empty) returns (InstanceV1)
  {
	option (google.api.http) = {
      get: "/api/v1/instance"
    };
  }
  
  rpc GetActivities (google.protobuf.Empty) returns (Activities)
  {
	option (google.api.http) = {
      get: "/api/v1/instance/activity"
      response_body: "data"
    };
  }
  
  rpc GetRules (google.protobuf.Empty) returns (Rules)
  {
	option (google.api.http) = {
      get: "/api/v1/instance/rules"
      response_body: "data"
    };
  }
  
  rpc GetLists (google.protobuf.Empty) returns (Lists)
  {
	option (google.api.http) = {
      get: "/api/v1/lists"
      response_body: "data"
    };
  }
}